--- a/app/views/homes/_form.html.erb
+++ b/app/views/homes/_form.html.erb
@@ -12,8 +12,24 @@
   <% end %>
 
   <div>
-    <%= form.label :content %>
-    <%= form.rich_text_area :content %>
-    <%= form.submit %>
+    <%= form.label :name, class: "p-2 block mb-2 text-sm font-medium text-gray-900 ligth:text-white" %>
+    <%= form.text_field :name, required: true, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 light:bg-gray-700 light:border-gray-600 light:placeholder-gray-400 light:text-white light:focus:ring-blue-500 light:focus:border-blue-500" %>
+  </div>
+  <div>
+    <%= form.label :dob, class: "p-2 block mb-2 text-sm font-medium text-gray-900 light:text-white" %>
+    <%= form.date_field :dob, required: true, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 light:bg-gray-700 light:border-gray-600 light:placeholder-gray-400 light:text-white light:focus:ring-blue-500 light:focus:border-blue-500" %>
+  </div>
+  <div>
+    <%= form.label :dod, class: "p-2 block mb-2 text-sm font-medium text-gray-900 light:text-white" %>
+    <%= form.date_field :dod, required: true, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 light:bg-gray-700 light:border-gray-600 light:placeholder-gray-400 light:text-white light:focus:ring-blue-500 light:focus:border-blue-500" %>
+  </div>
+  <div>
+    <%= form.label :county, class: "p-2 block mb-2 text-sm font-medium text-gray-900 light:text-white" %>
+    <%= form.select :county, counties, selected: "Nairobi", required: true, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 light:bg-gray-700 light:border-gray-600 light:placeholder-gray-400 light:text-white light:focus:ring-blue-500 light:focus:border-blue-500" %>
+  </div>
+  <div>
+    <%= form.label :content, class: "p-2 block mb-2 text-sm font-medium text-gray-900 light:text-white" %>
+    <%= form.rich_text_area :content, required: true %>
+    <p class="py-4"> <%= form.submit "Create Notice", class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 light:bg-blue-600 light:hover:bg-blue-700 focus:outline-none light:focus:ring-blue-800"%>
   </div>
 <% end %>
