--- a/app/views/homes/edit.html.erb
+++ b/app/views/homes/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing home</h1>
+<h1>Editing notice</h1>
 
 <%= render "form", home: @home %>
 
 <br>
 
 <div>
-  <%= link_to "Show this home", @home %> |
-  <%= link_to "Back to homes", homes_path %>
+  <%= link_to "Show this notice", @home %> |
+  <%= link_to "Back to notices", homes_path %>
 </div>
