--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -24,7 +24,9 @@
         <%= link_to "Merge", home_merge_url(pull_request[:id]), class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 p-4" %>
       </p>
     <%else%>
-      <%= call_mpesa %>
+      <p class="py-4">
+        <%= link_to "Pay", mpesas_url, class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 p-4" %>
+      </p>
     <% end %>
 
   <% end %>
