--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -4,17 +4,48 @@
   <% @pull_requests&.each do |pull_request| %>
     <% pull_request[:files]&.each_with_index do |file, index| %>
       <% if file.split('.').last == 'md' %>
-        <div class="border-t-4 m-4 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 light:bg-gray-700 light:border-gray-600 light:placeholder-gray-400 light:text-white light:focus:ring-blue-500 light:focus:border-blue-500" >
-          <% image_index = index + (pull_request[:files].size/2) %>
-          <% image = pull_request[:files][image_index]%>
-          <% img_root = 'https://raw.githubusercontent.com/rip-coke/rip/draft/' %>
-
-          <p class="py-4"> <%= link_to "Delete", home_delete_url(pull_request[:id], image: image, file: file) , class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 p-4" %> </p>
-          <p><img src='<%= "#{img_root}/#{image}" %>' width="512" height="256"></p>
-          <%= pull_request[:text][index]&.gsub('+', ' <br/> ')&.html_safe %>
+        <% image_index = index + (pull_request[:files].size/2) %>
+        <% image = pull_request[:files][image_index]%>
+        <p class="py-4"> <%= link_to "Delete", home_delete_url(pull_request[:id], image: image, file: file) , class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 p-4" %> </p>
+         <div id="content" class="bg-white py-6 sm:py-6">
+          <div class="mx-auto max-w-7xl px-6 lg:px-4">
+            <div
+              class="mx-auto mt-3 grid max-w-2xl grid-cols-1 gap-x-4 gap-y-4 lg:mx-0 lg:max-w-none lg:grid-cols-2"
+            >
+              <div class="relative w-full">
+                <% img_root = 'https://raw.githubusercontent.com/rip-coke/rip/draft/' %>
+                <img
+                  src='<%= "#{img_root}/#{image}" %>'
+                  alt=""
+                  class="aspect-[16/9] w-full rounded-2xl bg-gray-100 object-cover sm:aspect-[2/1] lg:aspect-[3/2]"
+                />
+                <!-- <div class="absolute inset-0 rounded-2xl ring-1 ring-inset ring-gray-900/10"></div> -->
+              </div>
+              <div class="w-full px-4">
+                <div class="flex-auto text-center font-semibold text-lg pb-2"><%= name(pull_request, index) %></div>
+                <div class="flex items-center gap-x-4 text-s">
+                  <div class="flex-auto">
+                    <time datetime="2020-03" class="text-gray-500"
+                      ><%= dob(pull_request, index) %></time
+                    >
+                    -
+                    <time datetime="2020-03" class="text-gray-500"
+                      ><%= dod(pull_request, index) %></time
+                    >
+                  </div>
+                  <div class="flex items-right"><%= county(pull_request, index) %></div>
+                </div>
+                <div class="group relative">
+                  <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">
+                    <%= body_text(pull_request, index) %>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      <% end %>
-      <% if ['oliviamuia09@gmail.com', 'vyncem@gmail.com', 'nataliejeropbullut@gmail.com'].include?(current_user.email) %>
+
+        <% if ['oliviamuia09@gmail.com', 'vyncem@gmail.com', 'nataliejeropbullut@gmail.com'].include?(current_user.email) %>
         <p class="py-4">
           <%= link_to "Merge", home_merge_url(pull_request[:id]), class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 p-4" %>
         </p>
@@ -27,19 +58,20 @@
         <%elsif @reply && @reply.include?('successfully')%>
           <%= @reply %>
           <p class="py-4">
-            <%= link_to "Merge", home_merge_url(pull_request[:id], reply: @reply), class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 p-4" %>
+            <%= link_to "Finish", home_merge_url(pull_request[:id], reply: @reply), class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 p-4" %>
           </p>
         <%else%>
           <%= @reply %>
-          <%= form_with url: mpesas_path do |form| %>
-            <p class = "py-4" >
+          <%= form_with url: mpesas_path, class: "flex" do |form| %>
+            <p class = "py-4 px-4 flex-1" >
               <%= form.text_field :payee, value: @payee, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 light:bg-gray-700 light:border-gray-600 light:placeholder-gray-400 light:text-white light:focus:ring-blue-500 light:focus:border-blue-500"  %>
             </p>
-            <p class = "py-4" >
+            <p class = "py-4 flex-1" >
               <%= form.submit "Pay", class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 p-4" %>
             </p>
           <% end %>
         <%end%>
+      <% end %>
       <% end %>
     <% end %>
   <% end %>
