--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -45,7 +45,7 @@
           </div>
         </div>
 
-        <% if ['oliviamuia09@gmail.com', 'vyncem@gmail.com', 'nataliejeropbullut@gmail.com'].include?(current_user.email) %>
+        <% if ['oliviamuia09@gmail.com', 'vyncem@gmail.com'].include?(current_user.email) %>
         <p class="py-4">
           <%= link_to "Merge", home_merge_url(pull_request[:id]), class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 p-4" %>
         </p>
