--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,34 +1,33 @@
-# <!-- initialize transaction -->
-# <!-- curl https://api.paystack.co/transaction/initialize -H "Authorization: Bearer ${PAYSTACK_SECRET_KEY}" -H "Content-Type: application/json" -d '{ "email": "customer@email.com", "amount": "1"}' -X POST -->
-# <!-- Verify transaction -->
-# <!-- curl https://api.paystack.co/transaction/verify/:reference -H "Authorization: Bearer ${PAYSTACK_SECRET_KEY}" -X GET -->
 
 <script type="module">
-  console.log('Paystack JavaScript loaded');
-
-  console.log('<%= ENV.fetch('PAYSTACK_PUBLIC_KEY', nil) %>');
-  import Paystack from '@paystack/inline-js';
-  const popup = new Paystack()
-  popup.newTransaction({
-    key: '<%= ENV.fetch("PAYSTACK_PUBLIC_KEY", nil) %>',
-    email: 'sample@email.com',
-    amount: 1,
-    onSuccess: (transaction) => {
-      console.log(transaction);
-    },
-    onLoad: (response) => {
-      console.log("onLoad: ", response);
-    },
-    onCancel: () => {
-      console.log("onCancel");
-    },
-    onError: (error) => {
-      console.log("Error: ", error.message);
-    }
-  })
+    import Paystack from '@paystack/inline-js';
+    const popup = new Paystack()
+    var url = "<%= html_escape(home_verify_url('code')) %>"
+    document.getElementById('paystackBtn').onclick = function(e) {
+        e.preventDefault();
+        var handler = Paystack.setup({
+          key: '<%= ENV.fetch("PAYSTACK_PUBLIC_KEY", nil) %>',
+          email: '<%= current_user.email %>',
+          amount: 100, 
+          callback: function(response){
+            window.location.href = url.substring('code', response.reference);
+          },
+          onClose: function(){
+            alert('Payment window closed');
+          }
+        });
+        handler.openIframe();
+      }
 </script>
 
 <h1 class="text-3xl font-bold underline p-4">Notices</h1>
+
+
+
+  <button id="paystackBtn" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 p-4">
+    Pay
+  </button>
+
 
 <div id="homes", class="p-4">
   <% pull_user_ids = @pull_requests ? @pull_requests.map {|pull_request| pull_request[:text].map {|tex,index| tex&.split('+')&.select {|text| text.include? 'user'}&.first&.split(':')&.second&.gsub(/[\n]+/,'')&.gsub(' ','')}}.flatten : []%>
